--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-select": "^5.8.1",
     "recharts": "^2.12.7"
   },
   "devDependencies": {
