--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-select": "^5.8.1",
-    "recharts": "^2.12.7"
+    "recharts": "^2.12.7",
+    "axios": "^1.7.7"
   },
   "devDependencies": {
     "@types/node": "^20",
