changed the payload structure for meta entity type and moved nav element outside the product category

--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_LOCAL_BASE_URL=http://localhost:5001/travel
+NEXT_PUBLIC_LOCAL_BASE_URL=http://localhost:5000/travel
 # NEXT_PUBLIC_LOCAL_BASE_URL=https://travel1.udbcdemo.com/travel
 
 
@@ -7,4 +7,4 @@ NEXT_PUBLIC_LOCAL_BASE_URL_SPRING=http://localhost:8080
 # NEXT_PUBLIC_LOCAL_BASE_URL_SPRING=https://travel1.udbcdemo.com
 
 #Drools Server Url
-NEXT_PUBLIC_DROOLS_SERVER_URL=http://localhost/web
+NEXT_PUBLIC_DROOLS_SERVER_URL=http://localhost:8080/web
