added entity-relationships for meta entity page

--- a/.env.local
+++ b/.env.local
@@ -1,10 +1,10 @@
-#NEXT_PUBLIC_LOCAL_BASE_URL=http://localhost:5001/travel
-NEXT_PUBLIC_LOCAL_BASE_URL=https://sth-backoffice.udbcdemo.com/travel
+NEXT_PUBLIC_LOCAL_BASE_URL=http://localhost:5000/travel
+# NEXT_PUBLIC_LOCAL_BASE_URL=https://sth-backoffice.udbcdemo.com/travel
 
 
 #j-hipster api
-#NEXT_PUBLIC_LOCAL_BASE_URL_SPRING=http://localhost:8080
-NEXT_PUBLIC_LOCAL_BASE_URL_SPRING=https://sth-backoffice.udbcdemo.com
+NEXT_PUBLIC_LOCAL_BASE_URL_SPRING=http://localhost:8080
+# NEXT_PUBLIC_LOCAL_BASE_URL_SPRING=https://sth-backoffice.udbcdemo.com
 
 #Drools Server Url
 #NEXT_PUBLIC_DROOLS_SERVER_URL=http://localhost/web
