--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "html-react-parser": "^5.1.17",
     "jodit-react": "^4.1.2",
     "js-cookie": "^3.0.5",
-    "next": "^14.2.5",
+    "managementbigcommerce": "file:",
+    "next": "^14.2.15",
     "react": "^18",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-select": "^5.8.1",
