changed env url for backend

--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,5 @@
-#NEXT_PUBLIC_LOCAL_BASE_URL=http://localhost:5001/travel
-NEXT_PUBLIC_LOCAL_BASE_URL=https://sth-backoffice.udbcdemo.com/travel
+ NEXT_PUBLIC_LOCAL_BASE_URL=http://localhost:8089/auth
+#  NEXT_PUBLIC_LOCAL_BASE_URL=https://sth-backoffice.udbcdemo.com/travel
 
 
 #j-hipster api
