--- a/.env.local
+++ b/.env.local
@@ -21,18 +21,18 @@
 
 
 # NEXT_PUBLIC_LOCAL_BASE_URL=http://${DNS_FRONTEND_NAME}/auth
-NEXT_PUBLIC_LOCAL_BASE_URL=http://localhost:8079/auth
+NEXT_PUBLIC_LOCAL_BASE_URL=https://backoffice-travel1.udbcdemo.com/auth
 # NEXT_PUBLIC_LOCAL_BASE_URL=https://backoffice-travel1.udbcdemo.com/travel/auth
 
 #j-hipster api
 # NEXT_PUBLIC_LOCAL_BASE_URL_SPRING=http://${DNS_BACKOFFICE_NAME}
-NEXT_PUBLIC_LOCAL_BASE_URL_SPRING=http://localhost:8080
+NEXT_PUBLIC_LOCAL_BASE_URL_SPRING=https://backoffice-travel1.udbcdemo.com/tif
 # NEXT_PUBLIC_LOCAL_BASE_URL_SPRING=https://backoffice-travel1.udbcdemo.com/tif
 
 
 #Drools Server Url
 # NEXT_PUBLIC_DROOLS_SERVER_URL=https://${DNS_FRONTEND_NAME}/web
-NEXT_PUBLIC_DROOLS_SERVER_URL=http://rule.default.svc.cluster.local/web
+NEXT_PUBLIC_DROOLS_SERVER_URL=https://backoffice-travel1.udbcdemo.com/rule/web
 
 # NEXT_PUBLIC_BASE_URL=http://${DNS_FRONTEND_NAME}/api
 # NEXT_PUBLIC_BASE_URL=https://travel1.udbcdemo.com/tif
