--- a/.env.local
+++ b/.env.local
@@ -15,6 +15,6 @@ NEXT_PUBLIC_DROOLS_SERVER_URL=https://backoffice-travel1.udbcdemo.com/rule/web
 
 NEXT_PUBLIC_ITEMS_PER_PAGE=2
 
-# NEXTAUTH_URL=backoffice-travel1.udbcdemo.com
+NEXTAUTH_URL=https://backoffice-travel1.udbcdemo.com
 NEXTAUTH_SECRET=46JBmDjqEZt2w4D7WgBNYTRnAEdc4KyEEoumd0wtJn_3MZQYe2CXepfqxRcSKBLrViccR1noZ-
 
