handled the plural form of entities in jhipster

--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,4 @@
+# travel security api
 # NEXT_PUBLIC_LOCAL_BASE_URL=http://${DNS_FRONTEND_NAME}/auth
 # NEXT_PUBLIC_LOCAL_BASE_URL=http://localhost:8079/auth
 NEXT_PUBLIC_LOCAL_BASE_URL=https://backoffice-travel1.udbcdemo.com/travel/auth
@@ -7,10 +8,9 @@ NEXT_PUBLIC_LOCAL_BASE_URL=https://backoffice-travel1.udbcdemo.com/travel/auth
 # NEXT_PUBLIC_LOCAL_BASE_URL_SPRING=http://localhost:8080
 NEXT_PUBLIC_LOCAL_BASE_URL_SPRING=https://backoffice-travel1.udbcdemo.com/tif
 
-
 #Drools Server Url
 # NEXT_PUBLIC_DROOLS_SERVER_URL=https://${DNS_FRONTEND_NAME}/web
-NEXT_PUBLIC_DROOLS_SERVER_URL=https://backoffice-travel1.udbcdemo.com/rule/web
+NEXT_PUBLIC_DROOLS_SERVER_URL=https://backoffice-travel1.udbcdemo.com/rule
 # NEXT_PUBLIC_DROOLS_SERVER_URL=http://localhost:8081
 
 NEXT_PUBLIC_ITEMS_PER_PAGE=2
