--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "js-cookie": "^3.0.5",
     "next": "^14.2.15",
     "next-auth": "^4.24.10",
+    "pluralize": "^8.0.0",
     "react": "^18",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18",
