--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "js-cookie": "^3.0.5",
     "next": "^14.2.15",
     "next-auth": "^4.24.10",
+    "next-i18next": "^15.4.0",
     "next-intl": "^3.25.3",
     "pluralize": "^8.0.0",
     "react": "^18",
