post merge changes

--- a/.env.local
+++ b/.env.local
@@ -12,10 +12,10 @@ NEXT_PUBLIC_LOCAL_BASE_URL_SPRING=https://backoffice-travel1.udbcdemo.com/tif
 # NEXT_PUBLIC_DROOLS_SERVER_URL=https://${DNS_FRONTEND_NAME}/web
 
 NEXT_PUBLIC_DROOLS_SERVER_URL=https://backoffice-travel1.udbcdemo.com/rule
-#NEXT_PUBLIC_DROOLS_SERVER_URL=http://10.128.15.192
+# NEXT_PUBLIC_DROOLS_SERVER_URL=http://10.128.15.192
 # NEXT_PUBLIC_DROOLS_SERVER_URL=http://localhost:8081
 
 NEXT_PUBLIC_ITEMS_PER_PAGE=2
 
-# NEXTAUTH_URL=https://backoffice-travel1.udbcdemo.com
+NEXTAUTH_URL=https://backoffice-travel1.udbcdemo.com
 NEXTAUTH_SECRET=46JBmDjqEZt2w4D7WgBNYTRnAEdc4KyEEoumd0wtJn_3MZQYe2CXepfqxRcSKBLrViccR1noZ-
