uncomment the nextauth url

--- a/.env.local
+++ b/.env.local
@@ -17,5 +17,5 @@ NEXT_PUBLIC_DROOLS_SERVER_URL=https://backoffice-travel1.udbcdemo.com/rule
 
 NEXT_PUBLIC_ITEMS_PER_PAGE=2
 
-# NEXTAUTH_URL=https://backoffice-travel1.udbcdemo.com
+NEXTAUTH_URL=https://backoffice-travel1.udbcdemo.com
 NEXTAUTH_SECRET=46JBmDjqEZt2w4D7WgBNYTRnAEdc4KyEEoumd0wtJn_3MZQYe2CXepfqxRcSKBLrViccR1noZ-
