fixing Rohit's work

--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,6 @@
 # travel security api
 # NEXT_PUBLIC_LOCAL_BASE_URL=http://${DNS_FRONTEND_NAME}/auth
-NEXT_PUBLIC_TRAVEL_SECURITY=http://localhost:8089
+NEXT_PUBLIC_TRAVEL_SECURITY=http://localhost:8079
 # NEXT_PUBLIC_LOCAL_BASE_URL=https://backoffice-travel1.udbcdemo.com/travel
 
 #j-hipster api
@@ -10,8 +10,7 @@ NEXT_PUBLIC_LOCAL_BASE_URL_SPRING=http://localhost:8080
 
 #Drools Server Url
 # NEXT_PUBLIC_DROOLS_SERVER_URL=https://${DNS_FRONTEND_NAME}/web
-
-# NEXT_PUBLIC_DROOLS_SERVER_URL=https://backoffice-travel1.udbcdemo.com/rule
+NEXT_PUBLIC_DROOLS_SERVER_URL=https://backoffice-travel1.udbcdemo.com/rule
 # NEXT_PUBLIC_DROOLS_SERVER_URL=http://10.128.15.192
 # NEXT_PUBLIC_DROOLS_SERVER_URL=http://localhost:8081
 
