--- a/.env.local
+++ b/.env.local
@@ -1,12 +1,12 @@
 # travel security api
 # NEXT_PUBLIC_LOCAL_BASE_URL=http://${DNS_FRONTEND_NAME}/auth
-NEXT_PUBLIC_TRAVEL_SECURITY=http://localhost:8079
-# NEXT_PUBLIC_LOCAL_BASE_URL=https://backoffice-travel1.udbcdemo.com/travel
+# NEXT_PUBLIC_TRAVEL_SECURITY=http://localhost:8079
+NEXT_PUBLIC_LOCAL_BASE_URL=https://backoffice-travel1.udbcdemo.com/travel
 
 #j-hipster api
 # NEXT_PUBLIC_LOCAL_BASE_URL_SPRING=http://${DNS_BACKOFFICE_NAME}
-NEXT_PUBLIC_LOCAL_BASE_URL_SPRING=http://localhost:8080
-# NEXT_PUBLIC_LOCAL_BASE_URL_SPRING=https://backoffice-travel1.udbcdemo.com/tif
+# NEXT_PUBLIC_LOCAL_BASE_URL_SPRING=http://localhost:8080
+NEXT_PUBLIC_LOCAL_BASE_URL_SPRING=https://backoffice-travel1.udbcdemo.com/tif
 
 #Drools Server Url
 # NEXT_PUBLIC_DROOLS_SERVER_URL=https://${DNS_FRONTEND_NAME}/web
@@ -20,4 +20,5 @@ NEXT_PUBLIC_ITEMS_PER_PAGE=2
 NEXTAUTH_SECRET=46JBmDjqEZt2w4D7WgBNYTRnAEdc4KyEEoumd0wtJn_3MZQYe2CXepfqxRcSKBLrViccR1noZ-
 
 
+# search api
 NEXT_PUBLIC_LOCAL_BASE_URL_SPRING_SEARCH=http://localhost:8088
