--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,7 @@
 # travel security api
 # NEXT_PUBLIC_LOCAL_BASE_URL=http://${DNS_FRONTEND_NAME}/auth
 # NEXT_PUBLIC_TRAVEL_SECURITY=http://localhost:8079
-NEXT_PUBLIC_LOCAL_BASE_URL=https://backoffice-travel1.udbcdemo.com/travel
+NEXT_PUBLIC_TRAVEL_SECURITY=https://backoffice-travel1.udbcdemo.com/travel
 
 #j-hipster api
 # NEXT_PUBLIC_LOCAL_BASE_URL_SPRING=http://${DNS_BACKOFFICE_NAME}
@@ -16,9 +16,10 @@ NEXT_PUBLIC_DROOLS_SERVER_URL=https://backoffice-travel1.udbcdemo.com/rule
 
 NEXT_PUBLIC_ITEMS_PER_PAGE=2
 
-# NEXTAUTH_URL=https://backoffice-travel1.udbcdemo.com
+NEXTAUTH_URL=https://backoffice-travel1.udbcdemo.com
 NEXTAUTH_SECRET=46JBmDjqEZt2w4D7WgBNYTRnAEdc4KyEEoumd0wtJn_3MZQYe2CXepfqxRcSKBLrViccR1noZ-
 
 
 # search api
-NEXT_PUBLIC_LOCAL_BASE_URL_SPRING_SEARCH=http://localhost:8088
+# NEXT_PUBLIC_LOCAL_BASE_URL_SPRING_SEARCH=http://localhost:8088
+NEXT_PUBLIC_LOCAL_BASE_URL_SPRING_SEARCH=https://travel1.udbcdemo.com/web
