--- a/.env.local
+++ b/.env.local
@@ -21,5 +21,5 @@ NEXTAUTH_SECRET=46JBmDjqEZt2w4D7WgBNYTRnAEdc4KyEEoumd0wtJn_3MZQYe2CXepfqxRcSKBLr
 
 
 # search api
-NEXT_PUBLIC_LOCAL_BASE_URL_SPRING_SEARCH=http://localhost:8088
-# NEXT_PUBLIC_LOCAL_BASE_URL_SPRING_SEARCH=https://travel1.udbcdemo.com/web
+# NEXT_PUBLIC_LOCAL_BASE_URL_SPRING_SEARCH=http://localhost:8088
+NEXT_PUBLIC_LOCAL_BASE_URL_SPRING_SEARCH=https://travel1.udbcdemo.com/web
