--- a/.env.local
+++ b/.env.local
@@ -11,6 +11,7 @@ NEXT_PUBLIC_LOCAL_BASE_URL_SPRING=https://backoffice-travel1.udbcdemo.com/tif
 #Drools Server Url
 # NEXT_PUBLIC_DROOLS_SERVER_URL=https://${DNS_FRONTEND_NAME}/web
 NEXT_PUBLIC_DROOLS_SERVER_URL=https://backoffice-travel1.udbcdemo.com/rule
+# NEXT_PUBLIC_DROOLS_SERVER_URL=http://localhost:8081
 # NEXT_PUBLIC_DROOLS_SERVER_URL=http://10.128.15.192
 # NEXT_PUBLIC_DROOLS_SERVER_URL=http://localhost:8081
 
