--- a/.env.local
+++ b/.env.local
@@ -1,27 +1,8 @@
-# travel security api
-# NEXT_PUBLIC_LOCAL_BASE_URL=http://${DNS_FRONTEND_NAME}/auth
-# NEXT_PUBLIC_TRAVEL_SECURITY=http://localhost:8080
-NEXT_PUBLIC_TRAVEL_SECURITY=https://ub-travel-services-backend-gwrycb2bhq-uc.a.run.app
-
-#j-hipster api
-# NEXT_PUBLIC_LOCAL_BASE_URL_SPRING=http://${DNS_BACKOFFICE_NAME}
-# NEXT_PUBLIC_LOCAL_BASE_URL_SPRING=http://localhost:8080
-NEXT_PUBLIC_LOCAL_BASE_URL_SPRING=https://backoffice.bigtravel.live/tif
-
-#Drools Server Url
-# NEXT_PUBLIC_DROOLS_SERVER_URL=https://${DNS_FRONTEND_NAME}/web
-NEXT_PUBLIC_DROOLS_SERVER_URL=https://backoffice.bigtravel.live/rule
-# NEXT_PUBLIC_DROOLS_SERVER_URL=http://localhost:8081
-# NEXT_PUBLIC_DROOLS_SERVER_URL=http://10.128.15.192
-# NEXT_PUBLIC_DROOLS_SERVER_URL=http://localhost:8081
+NEXT_PUBLIC_TRAVEL_SECURITY=http://localhost:8080
+# NEXT_PUBLIC_TRAVEL_SECURITY=https://ub-travel-services-backend-gwrycb2bhq-uc.a.run.app
 
 NEXT_PUBLIC_ITEMS_PER_PAGE=2
 
-
-# NEXTAUTH_URL=https://backoffice.bigtravel.live
+# NEXTAUTH_URL=https://managementbigcommerce-298718238493.europe-west3.run.app
 NEXTAUTH_SECRET=46JBmDjqEZt2w4D7WgBNYTRnAEdc4KyEEoumd0wtJn_3MZQYe2CXepfqxRcSKBLrViccR1noZ-
 
-
-# search api
-# NEXT_PUBLIC_LOCAL_BASE_URL_SPRING_SEARCH=http://localhost:8088
-NEXT_PUBLIC_LOCAL_BASE_URL_SPRING_SEARCH=https://demo.bigtravel.live/web
